# beak

./: .gitignore  beak.code-workspace  docker-compose-dev.yml  docker-compose.yml
.devcontainer/: devcontainer.json
beak-bot/: .prettierrc  Dockerfile  package-lock.json  package.json  tsconfig.json
beak-bot/src/: index.ts  settings.ts  topics.ts
beak-bot/src/bots/: beak.ts  fake.ts  index.ts
beak-bot/src/clients/: fake.ts  index.ts  irc.ts
beak-bot/src/database/: index.ts
beak-bot/src/logging/: index.ts
beak-bot/src/models/: factory.ts  groq.ts  index.ts  ollama.ts  query.ts
beak-bot/src/plugins/: embed.ts  index.ts  oracle.ts  personality.ts  read.ts  shitpost.ts  summarize.ts
beak-bot/src/tools/: irc-database-import.ts  irc-embedding-test.ts  irc-process.ts  irc-vector-import.ts  irc-vector-query.ts
beak-bot/src/utilities/: fetching.ts  messages.ts  mutex.ts  text.ts
beak-embeddings/: pyproject.toml
beak-embeddings/beak_embeddings/: cli.py
